--- a/app/src/main/res/layout/item_comida.xml
+++ b/app/src/main/res/layout/item_comida.xml
@@ -2,7 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/imagen"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/ic_launcher_background">
+
+    </ImageView>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/lblTitulo"
@@ -10,13 +25,16 @@
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:textStyle="bold"
-         />
+        />
     <TextView
         android:id="@+id/lblSubtitulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:textStyle="normal"
-         />
+        />
+
+</LinearLayout>
+
 
 </LinearLayout>
